tests/paczka1/fuzzy1/27814050.err
Error in line 2: kgaG566BaIU A15 44,46
Error in line 1: yvw A15 46,2
Error in line 19: jDolFtoWL6 A23 27,4
Error in line 21: wVoaUYD9Hax A23 71,6
Error in line 30: XHtsuuv S479 50,3
